# django-blog

./: .bumpversion.toml  .gitignore  README.md  pyproject.toml  start_db.sh
src/blog/: admin.py  feeds.py  forms.py  models.py  resources.py  sitemaps.py  urls.py  views.py
src/blog/management/commands/: add_posts.py  addposts.py  firstuser.py
src/blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py  0004_post_tags.py  0005_trigram_ext.py
src/blog/templates/: pagination.html
src/blog/templates/blog/: base.html
src/blog/templates/blog/post/: comment.html  detail.html  latest_posts.html  list.html  search.html  share.html
src/blog/templates/blog/post/includes/: comment_form.html
src/blog/templatetags/: blog_tags.py
src/mysite/: admin.py  settings.py  urls.py
src/repository/: admin.py  admin_util.py  apps.py  models.py
