[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.5",
    "django-taggit>=6.1.0",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "faker>=35.0.0",
    "ruff>=0.9.2",
]

[tool.ruff]
line-length = 100
